samples/_failures_safe/1761491266_a291c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c325c1f0.c: In function ‘main’:
./samples/SAFE/__tmp_c325c1f0.c:156:18: error: expected ‘)’ at end of input
  156 |         if (input
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_c325c1f0.c:156:9: error: expected declaration or statement at end of input
  156 |         if (input
      |         ^~
./samples/SAFE/__tmp_c325c1f0.c:156:9: error: expected declaration or statement at end of input
